2008-03-25 Martin Schaaf <mascha@ma-scha.de>

	* src/TextThought.py
	* src/MMapArea.py
	* src/BaseThought.py
	* src/MainWindow.py
	* src/TextBufferMarkup.py
	o add font selection support for thoughts, fixes issue 79
	o change attributes instead of inserting, fixes hopefully issue 53

2008-03-26  Don Scorgie  <Don@Scorgie.org>

	* src/Browser.py: 
	Only remember browser window size
	using gconf when not running
	under Windows (gconf isn't available
	there.  We need another solution)
	

2008-03-25 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/utils.py
	* src/MapList.py
	* src/MainWindow.py
	* src/Browser.py
	* src/ImageThought.py
	Export maps with images as tarball.

2008-03-25 Martin Schaaf <mascha@ma-scha.de>

	* src/ImageThought.py
	* src/TextThought.py
	* src/DrawingThought.py
	* src/utils.py
	o show a bigger border if a thought has extended info, fixes issue 33

2008-03-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/Browser.py
	Allow resizing.

2008-03-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Add bounding box selection.

2008-03-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	More optimizations for issue 55. Partial redraw is done on editing and
	selecting and off-screen clipping has been simplified.

2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/Links.py
	Fixes issue 62. Links are not selected if not clicked. 

2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Off-screen clipping works for other scale factors too, but only in
	horizontal direction.

2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fixed bug introduced with last revision.

2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Don't draw off-screen thoughts. It is still a bit whacky and not working for
	scales other than 1.0.
